[package]
name = "tree"
version = "0.1.0"
authors = ["= <hjalte.nannestad@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
bevy = "0.5.0"
rand = { version = "0.8.3", features = ["small_rng"] }
ron = "0.6.4"
serde = "1.0.125"
bevy_mod_debugdump = "0.1"
